# calc-recursive-descent

./: CMakeLists.txt  README.md
doc/: calc.ebnf
include/Calc/: Calc.hpp  SyntaxError.hpp
include/Calc/Ast/: AdditionExpression.hpp  Ast.hpp  BinaryExpression.hpp  DivisionExpression.hpp  ExponentExpression.hpp  Expression.hpp  MultiplicationExpression.hpp  NegationExpression.hpp  Number.hpp  Operator.hpp  SubtractionExpression.hpp  UnaryExpression.hpp  Visitor.hpp
src/: CMakeLists.txt  Calc.cpp  Evaluator.cpp  Evaluator.hpp  Lexer.cpp  Lexer.hpp  Lexer.re  Parser.cpp  Parser.hpp  Solver.hpp  Token.hpp  config.hpp.in  main.cpp
test/: CMakeLists.txt  addition.cpp  division.cpp  multiplication.cpp  order_of_operations.cpp  power.cpp  subtraction.cpp  syntax_error.cpp
